--- a/src/main/resources/templates/task/create.html
+++ b/src/main/resources/templates/task/create.html
@@ -26,82 +26,95 @@
 
                             <section class="panel panel-transparent">
                                 <header class="panel-heading">
-                                    <h2 class="panel-title">Task Create</h2>
+                                    <h2 class="panel-title">Task Status</h2>
                                 </header>
-
                                 <div class="panel-body">
-
                                     <!-- ------------------------FORM START----------------------------- -->
-                                    <form action="#">
-
+                                    <form th:action="@{/task/employee/update/{id}(id=${task.id})}" method="post"
+                                          th:object="${task}">
                                         <div class="row">
-                                            <div class="col">
+                                            <div class="col-sm-6 col-md-6 col-xs-12">
                                                 <div class="form-group">
                                                     <label>Project</label>
-                                                    <select name="project" class="custom-select">
-                                                        <option></option>
+                                                    <select th:field="*{project}" name="project" class="custom-select"
+                                                            readonly>
+                                                        <option th:each="project : ${projects}"
+                                                                th:value="${project.projectCode}"
+                                                                th:text="${project.projectCode+'-'+ project.projectName}"></option>
                                                     </select>
                                                 </div>
                                             </div>
                                         </div>
-
                                         <div class="row">
-                                            <div class="col">
+                                            <div class="col-sm-6 col-md-6 col-xs-12">
                                                 <div class="form-group">
                                                     <label>Assigned Employee</label>
-                                                    <select name="assignedemployee" class="custom-select">
-                                                        <option></option>
+                                                    <select th:field="*{assignedEmployee}" name="assignedemployee"
+                                                            class="custom-select" readonly>
+                                                        <option th:each="employee : ${employees}"
+                                                                th:value="${employee.userName}"
+                                                                th:text="${employee.firstName +' '+ employee.lastName}"></option>
                                                     </select>
                                                 </div>
                                             </div>
                                         </div>
-
                                         <div class="row">
-                                            <div class="col">
-                                                <div class="form-group">
-                                                    <label for="tasksubject" class="col-form-label">Task Subject</label>
-                                                    <input id="tasksubject" type="text" class="form-control"
-                                                           placeholder="task subject">
+                                            <div class="col-sm-6 col-md-6 col-xs-12">
+                                                <div class="row">
+                                                    <div class="col-sm-12 col-md-12 col-xs-12">
+                                                        <div class="form-group">
+                                                            <label for="tasksubject">Task Subject</label>
+                                                            <input th:field="*{taskSubject}" id="tasksubject"
+                                                                   type="text" class="form-control"
+                                                                   aria-describedby="inputGroupPrepend" readonly/>
+                                                        </div>
+                                                    </div>
                                                 </div>
                                             </div>
                                         </div>
-
                                         <div class="row">
-                                            <div class="col">
-                                                <div class="form-group">
-                                                    <label for="taskdetail">Task Detail</label>
-                                                    <textarea id="taskdetail" class="form-control"
-                                                              placeholder="task detail"></textarea>
+                                            <div class="col-sm-6 col-md-6 col-xs-12">
+                                                <div class="row">
+                                                    <div class="col-sm-12 col-md-12 col-xs-12">
+                                                        <div class="form-group">
+                                                            <label>Task Detail</label>
+                                                            <textarea th:field="*{taskDetail}" id="taskdetail"
+                                                                      class="form-control" rows="3"
+                                                                      aria-describedby="inputGroupPrepend"
+                                                                      readonly></textarea>
+                                                        </div>
+                                                    </div>
                                                 </div>
                                             </div>
                                         </div>
-
                                         <div class="row">
-                                            <div class="col">
+                                            <div class="col-sm-6 col-md-6 col-xs-12">
+                                                <div class="form-group">
+                                                    <label>Status</label>
+                                                    <select th:field="*{taskStatus}" name="taskStatus"
+                                                            class="custom-select">
+                                                        <option th:each="status : ${statuses}" th:value="${status}"
+                                                                th:text="${status.value}"></option>
+                                                    </select>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="row">
+                                            <div class="col-sm-6 col-md-6 col-xs-12">
                                                 <div class="float-right">
                                                     <button class="btn btn-success rounded-0" type="submit">Save
                                                     </button>
                                                 </div>
                                             </div>
                                         </div>
-
-
                                     </form>
                                     <!-- ------------------------FORM END----------------------------- -->
-
                                 </div>
-
                             </section>
-
                         </div>
-
                     </div>
-
                 </div>
-
-
                 <!-- ------------------------TABLE START----------------------------- -->
-
                 <div class="row">
                     <div class="col-lg-12 col-md-12">
                         <div class="col-md-12">
@@ -111,7 +124,7 @@
                                 </header>
                                 <div class="panel-body">
                                     <div class="table-responsive">
-                                        <table class="table table-striped">
+                                        <table class="table">
                                             <thead>
                                             <tr>
                                                 <th scope="col">Project</th>
@@ -123,15 +136,15 @@
                                             </tr>
                                             </thead>
                                             <tbody>
-                                            <tr>
-                                                <td></td>
-                                                <td></td>
-                                                <td></td>
-                                                <td></td>
-                                                <td></td>
-                                                <td class="actions">
-                                                    <a href="#" class="btn btn-warning rounded-0">Update</a>
-                                                    <a href="#" class="btn btn-danger rounded-0">Delete</a>
+                                            <tr th:each="task : ${tasks}">
+                                                <td th:text="${task.project.projectCode +'-'+task.project.projectName}"></td>
+                                                <td th:text="${task.taskSubject}"></td>
+                                                <td th:text="${task.assignedEmployee.firstName +' '+ task.assignedEmployee.lastName}"></td>
+                                                <td th:text="${#temporals.format(task.assignedDate, 'MM/dd/yyyy')}"></td>
+                                                <td th:text="${task.taskStatus}"></td>
+                                                <td>
+                                                    <a th:href="@{/task/employee/edit/{id}(id=${task.id})}"
+                                                       class="btn btn-warning rounded-0">Update</a>
                                                 </td>
                                             </tr>
                                             </tbody>
@@ -142,13 +155,9 @@
                         </div>
                     </div>
                 </div>
-
                 <!-- ------------------------TABLE END----------------------------- -->
-
             </div>
-
         </div>
-
     </div>
 
     <div th:replace="/fragments/footer :: footer"></div>
