--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -7,11 +7,9 @@
 <div th:fragment="header">
     <div class="dashboard-header">
         <nav class="navbar navbar-expand-lg bg-white fixed-top">
-            <a class="navbar-brand">
-                <img th:src="@{/images/CydeoLogo_01.png}"
-                     height="45"
-                     alt="JSOFT Admin"/>
-            </a>
+            <a class="navbar-brand" style="font-size: 1.5em; font-weight: bold; color: #333;">
+    Aziza Rakhmonova
+</a>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto navbar-right-top">
                     <li class="nav-item dropdown connection">
