--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -8,7 +8,7 @@
 <div class="splash-container">
     <div class="card ">
         <div class="card-header text-center">
-            <img class="logo-img" th:src="@{/images/CydeoLogo_01.png}" height="45" alt="logo">
+    <span style="font-size: 1.5em; font-weight: bold; color: #333;">Aziza Rakhmonova</span>
         </div>
         <div class="card-body">
             <form th:action="@{/welcome}">
